# E-Commerce-Conversion-Intelligence-Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  E-Commerce-Conversion-Intelligence-Platform  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-app.txt  requirements-ci.txt  requirements-evidently.txt  requirements-mlflow.txt  requirements.txt
.streamlit/: config.toml
app/: Executive_Overview.py  app_utils.py  requirements.txt
docs/: Docker_MLOps_Getting_Started_Manual copy.md  FAST_MONITORING_QA_QC_STATUS.md  FAST_MONITORING_README.md  GRAFANA_MISSION_CONTROL_QA_QC_STATUS.md  GRAFANA_MISSION_CONTROL_README.md  KUBERNETES_HELM_FILE_GUIDE.md  KUBERNETES_HELM_PRESENTATION_STORY.md  KUBERNETES_HELM_QA_QC_STATUS.md  KUBERNETES_HELM_STEP_BY_STEP_COMMANDS.md
k8s/: alerting.yaml  blackbox.yaml  grafana.yaml  metrics-exporter.yaml  namespace.yaml  prometheus.yaml  streamlit.yaml
monitoring/: README.md
scripts/: audit_champion_visual_inputs.py  audit_security_repro.py  build_champion_visual_review_sheet.py  build_dependency_upgrade_candidates.py  build_ml_visual_final_review_pdf.py  build_service_dependency_candidates.py  build_threshold_visual_review_sheet.py  diagnose_dependency_candidate_crash.py  generate_champion_selection_visuals.py  generate_experiment_tracking_visuals.py  generate_explainability_visuals.py  generate_feature_health_visuals.py  generate_monitoring_visuals.py  generate_robustness_visuals.py  generate_segment_intelligence_visuals.py  generate_threshold_decision_visuals.py  k8s_demo_start.sh  k8s_demo_stop.sh  (+10 more)
(+278 files in other folders)
