[project]
name = "ecommerce-conversion-intelligence-platform"
version = "1.0.0"
description = "End-to-end ecommerce conversion intelligence platform with ML, BI dashboards, monitoring, and MLOps architecture."
requires-python = ">=3.10"
authors = [
  { name = "Ruturaj Mokashi" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
